--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-background">
+    <div class="overlay">
+        <div class="container-home">
+            <h1 class="headings-one">My Personal Bandcamp</h1>
+            <p class="headings-two">Sign-up to listen to music</p>
+            <%= link_to "Sign-Up", "#", class: "big-button" %>
+        </div>
+    </div>
+</div>
