--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
         <div class="container-home">
             <h1 class="headings-one">My Personal Bandcamp</h1>
             <p class="headings-two">Sign-up to listen to music</p>
-            <%= link_to "Sign-Up", "#", class: "big-button" %>
+            <%= link_to "Sign-Up", new_user_registration_path, class: "big-button" %>
         </div>
     </div>
 </div>
