nav and card components

--- a/app/views/pages/station.html.erb
+++ b/app/views/pages/station.html.erb
@@ -4,11 +4,91 @@
             <%= render 'shared/verticalnavbar' %>
             <%= yield %>
         </div>
-        <div class="overlay">
-            <div class="container-station-tracks">
-                <h1 class="headings-one">Track Area</h1>
-                <p class="p-about">with tracks</p>
-                
+        <div class="track-area">
+            <div class="track-card">
+                <div class="card-background">
+                    <img class="im-bg" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                </div>
+                <div class="track-details">
+                    <img class="card-img" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                    <h1 class="card-header">Track Name</h1>
+                    <h2 class="card-subheader">Track Album | Artist</h2>
+                    <p class="hashtag">#hastag #hashtag #hashtag</p>
+                    <div class="flex space-between controllers">
+                        <i class="fas fa-fast-backward"></i>
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-fast-forward"></i>
+                    </div>
+                </div>
+                <div class="container-station-tracks">
+                    <h1 class="headings-one">Track Area</h1>
+                    <p class="p-about">with tracks</p>
+                </div>
+                </div>
+
+                <div class="track-card">
+                <div class="card-background">
+                    <img class="im-bg" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                </div>
+                <div class="track-details">
+                    <img class="card-img" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                    <h1 class="card-header">Track Name</h1>
+                    <h2 class="card-subheader">Track Album | Artist</h2>
+                    <p class="hashtag">#hastag #hashtag #hashtag</p>
+                    <div class="flex space-between controllers">
+                        <i class="fas fa-fast-backward"></i>
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-fast-forward"></i>
+                    </div>
+                </div>
+                <div class="container-station-tracks">
+                    <h1 class="headings-one">Track Area</h1>
+                    <p class="p-about">with tracks</p>
+                </div>
+                </div>
+
+                  <div class="track-card">
+                <div class="card-background">
+                    <img class="im-bg" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                </div>
+                <div class="track-details">
+                    <img class="card-img" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                    <h1 class="card-header">Track Name</h1>
+                    <h2 class="card-subheader">Track Album | Artist</h2>
+                    <p class="hashtag">#hastag #hashtag #hashtag</p>
+                    <div class="flex space-between controllers">
+                        <i class="fas fa-fast-backward"></i>
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-fast-forward"></i>
+                    </div>
+                </div>
+                <div class="container-station-tracks">
+                    <h1 class="headings-one">Track Area</h1>
+                    <p class="p-about">with tracks</p>
+                </div>
+                </div>
+
+  <div class="track-card">
+                <div class="card-background">
+                    <img class="im-bg" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                </div>
+                <div class="track-details">
+                    <img class="card-img" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                    <h1 class="card-header">Track Name</h1>
+                    <h2 class="card-subheader">Track Album | Artist</h2>
+                    <p class="hashtag">#hastag #hashtag #hashtag</p>
+                    <div class="flex space-between controllers">
+                        <i class="fas fa-fast-backward"></i>
+                        <i class="fas fa-play"></i>
+                        <i class="fas fa-fast-forward"></i>
+                    </div>
+                </div>
+                <div class="container-station-tracks">
+                    <h1 class="headings-one">Track Area</h1>
+                    <p class="p-about">with tracks</p>
+                </div>
+                </div>
+
             </div>
         </div>
     </div>
