--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -5,14 +5,17 @@
         <p class="vertnav-usertype">User Type</h1>
     </div>
     <div class="vertnav-items">
-        <div>
-        <i class="fas fa-wave-square">Main Station</i>
+        <div class="flex">
+        <i class="fas fa-wave-square"></i><p class="nav-text">Main Station</p>
         </div>
-        <div>
-        <i class="fas fa-compact-disc">Playlists</i>
+        <div class="flex">
+        <i class="fas fa-music"></i><p class="nav-text">Playlists</p>
         </div>
-        <div>
-        <i class="fas fa-user">Account</i>
+        <div class="flex">
+        <i class="fas fa-user"></i><p class="nav-text">Account</p>
+        </div>
+        <div class="flex">
+        <i class="fas fa-compact-disc"></i><p class="nav-text">Albums</p>
         </div>
     </div>
 
