--- a/app/assets/stylesheets/components/_verticalnav.scss
+++ b/app/assets/stylesheets/components/_verticalnav.scss
@@ -27,4 +27,9 @@
     color: white;
     font-size: 18px;
     padding-left: 50px;
+    padding-top: 20px;
+} 
+
+.nav-text {
+    padding-left: 10px;
 }
