--- a/app/assets/stylesheets/components/_trackcard.scss
+++ b/app/assets/stylesheets/components/_trackcard.scss
@@ -1,5 +1,5 @@
 .track-card {
-    // width: 250px;
+    width: 250px;
     height: 350px;
     // background-image: url("https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80");
     // background-color: rgba(0,0,0,0.1);
@@ -8,7 +8,7 @@
     border-radius: 10px;
     text-align: center;
     overflow:hidden;
-    margin:20px;
+    // margin:20px;
     box-shadow: 0px 0px 15px rgba(0,0,0,0.8);
 }
 
