--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -9,3 +9,21 @@
         text-decoration: none;
     }
 }
+
+.logout-button {
+    background-color: #DD13D5;
+    color: white;
+    font-size: 28px;
+    padding: 10px 25px 10px 25px;
+    border-radius: 10px;
+    &:hover {
+        color:white;
+        text-decoration: none;
+    }
+}
+
+.add-album-button {
+    color: #DD13D5;
+    font-size: 48px;
+    padding-right: 15px;
+}
