--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -15,7 +15,8 @@
         <i class="fas fa-user"></i><p class="nav-text">Account</p>
         </div>
         <div class="flex">
-        <i class="fas fa-compact-disc"></i><p class="nav-text">Albums</p>
+        <i class="fas fa-compact-disc"></i>
+        <%= link_to "Albums", albums_path, class: "nav-text" %>
         </div>
     </div>
 
