--- a/app/assets/stylesheets/components/_verticalnav.scss
+++ b/app/assets/stylesheets/components/_verticalnav.scss
@@ -32,4 +32,9 @@
 
 .nav-text {
     padding-left: 10px;
+    color: white;
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
 }
