--- a/app/assets/stylesheets/components/_albumsarea.scss
+++ b/app/assets/stylesheets/components/_albumsarea.scss
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 20px;
-    row-gap: 0px;
+    row-gap: 40px;
     padding: 75px 20px 75px 20px;
-    width: 100%;
+    width: 90%;
+    margin-left: 280px;
 }
