--- a/app/assets/stylesheets/components/_fullwidthplayer.scss
+++ b/app/assets/stylesheets/components/_fullwidthplayer.scss
@@ -16,6 +16,9 @@
     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 }
 
+.fixed {
+    position: fixed;
+}
 .image-player {
     width: 90px;
     height: 80px;
