--- a/app/assets/stylesheets/components/_newalbum.scss
+++ b/app/assets/stylesheets/components/_newalbum.scss
@@ -2,6 +2,8 @@
     padding-top: 180px;
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 250px;
+    margin-left: 250px;
 }
 
 .album-image-new {
