--- a/app/assets/stylesheets/components/_trackcard.scss
+++ b/app/assets/stylesheets/components/_trackcard.scss
@@ -19,6 +19,11 @@
     -webkit-filter: blur(8px);
 }
 
+.card-background {
+    position: absolute;
+    z-index: -1;
+}
+
 .im-bg {
 
 }
@@ -40,10 +45,12 @@
 .card-header {
     font-size: 26px;
     border-bottom: 0px;
+    color: white;
 }
 
 .card-subheader {
     font-size: 18px;
+    color: white;
 }
 
 .hashtag {
@@ -54,4 +61,18 @@
     color: white;
     width: 100px;
     margin:auto;
+    padding-bottom: 10px;
+}
+
+.album-details {
+    padding-left:10px;
+    padding-right:10px;
+}
+
+.track-edit  {
+    color: white;
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
 }
