--- a/app/assets/stylesheets/pages/_station.scss
+++ b/app/assets/stylesheets/pages/_station.scss
@@ -3,7 +3,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    // height: 100vh;
+    background-attachment:fixed;
 }
 
 .station-flex {
