Revision of routes and tracks/albums controller

--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -14,6 +14,7 @@
             </div>
             <div class="right-div">
                 <div class="album-form-area">
+                    <!-- Ruby code for form -->
                     <h2>Add new track</h2>
                         <%= simple_form_for [@track] do |f| %>
                         <%= f.input :title,
