--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -20,8 +20,25 @@
                 </div>
             </div>
         </div>
-        <div class="albums-area-test">
-          <!-- Ruby code for form -->
+        <div class="albums-area">
+            <% @track.each do |track| %>    
+            <div class="track-card">
+            <% if track.photo.attached? %>
+                <%= cl_image_tag track.photo.key, class: "card-background"%>
+                <%= cl_image_tag track.photo.key, class: "", height: 180 %>
+            <% end %>
+                <div class="album-details">
+                    <h2 class="card-header"><%= track.title %></h2>
+                    <p class="card-subheader"><%= track.description %></p>
+                        <div class="flex space-between controllers">
+                            <i class="fas fa-fast-backward"></i>
+                            <i class="fas fa-play"></i>
+                            <i class="fas fa-fast-forward"></i>
+                        </div>
+                    <%= link_to "Edit", class: "track-edit" %>
+                </div>
+            </div>
+            <% end %>
         
         </div>
 
