--- a/app/assets/stylesheets/pages/_albumtracks.scss
+++ b/app/assets/stylesheets/pages/_albumtracks.scss
@@ -6,6 +6,9 @@
     // padding: 75px 20px 75px 20px;
     // width: 90%;
     // margin-left: 280px;
+    // overflow: hidden;
+    position: relative;
+    // height:100vh;
 }
 
 .station-background {
@@ -18,16 +21,26 @@
 }
 
 .background-albums-show {
-    position: relative;
+    position: absolute;
+    // height: 100vw;
+    z-index: -1;
 }
 
 .show-background {
-    position: relative;
+    // position: relative;
     // filter: blur(8px);
     // -webkit-filter: blur(8px);
-    position: absolute;
-    z-index: -1;
-    width: 100vw;
+    // position: absolute;
+    // z-index: -1;
+    // width: 100vw;
+    // height: 100vh;
+    // object-fit: fill;
+    // height: 100vh;
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
 }
 
 .album-show-details {
