--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -33,6 +33,9 @@
                                     <i class="fas fa-play"></i>
                                     <i class="fas fa-fast-forward"></i>
                                 </div>
+                                        <% if track.track.attached? %>
+                                        <%= cl_video_tag track.track.key,:source_types => [:mp3],:controls => true,:poster => false, class: "track-play"%>
+                                        <%end%>
                             <%= link_to "Edit", class: "track-edit" %>
                         </div>
                     </div>
