all cards play unique track with toggling play pause button

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -30,7 +30,7 @@
                             <p class="card-subheader"><%= track.description %></p>
                                 <div class="flex space-between controllers">
                                     <i class="fas fa-fast-backward"></i>
-                                    <i class="fas fa-play play-button" id="play-button"></i>
+                                    <i class="fas fa-play play-button" id=<%= "track-#{track.id}" %> ></i>
                                     <i class="fas fa-pause pause-button
                                     hidden" id="pause-button"></i>
                                     <i class="fas fa-fast-forward"></i>
