station controller and view and track.all

--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -6,7 +6,8 @@
     </div>
     <div class="vertnav-items">
         <div class="flex">
-        <i class="fas fa-wave-square"></i><p class="nav-text">Main Station</p>
+        <i class="fas fa-wave-square"></i>
+        <%= link_to "Station", station_index_path, class: "nav-text" %>
         </div>
         <div class="flex">
         <i class="fas fa-music"></i><p class="nav-text">Playlists</p>
