--- a/app/assets/stylesheets/components/_trackcard.scss
+++ b/app/assets/stylesheets/components/_trackcard.scss
@@ -1,6 +1,6 @@
 .track-card {
     width: 250px;
-    height: 350px;
+    height: 380px;
     // background-image: url("https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80");
     // background-color: rgba(0,0,0,0.1);
     backdrop-filter: blur(5px);
@@ -75,4 +75,14 @@
         color: white;
         text-decoration: none;
     }
+}
+
+.track-actions {
+    display: flex;
+    color: white;
+    width: 100%;
+    padding-left: 35%;
+    padding-right: 35%;
+    margin:auto 0;
+    text-align: center;
 }
