--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="flex">
         <i class="fas fa-music"></i>
-        <%= link_to "Playlists", station_index_path, class: "nav-text" %>
+        <%= link_to "Playlists", playlists_path, class: "nav-text" %>
         </div>
         <div class="flex">
         <i class="fas fa-compact-disc"></i>
