initialising dropdown collection

--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="playlist-form">
                                 <%= simple_form_for [@playlist] do |f| %>
-                                <%= f.input :playlist_title, :collection => %w[Mike Nick Jason Tim] %>
+                                <%= f.input :playlist_title, :collection => Playlist.all%>
                                 <%= f.submit "CREATE", class: "btn btn-primary" %>
                                 <% end %>
                                 </div>
