progress on track playlist form

--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -58,8 +58,10 @@
                                     </div>
                                 </div>
                                 <div class="playlist-form">
-                                <%= simple_form_for [@playlist] do |f| %>
-                                <%= f.input :playlist_title, :collection => Playlist.all%>
+                                <%= simple_form_for track do |f| %>
+                                    <%= f.fields_for :playlist_tracks_attributes do |s| %>
+                                    <%= s.input :playlist, :collection => Playlist.all, label_method: :playlist_title%>
+                                    <% end %>
                                 <%= f.submit "CREATE", class: "btn btn-primary" %>
                                 <% end %>
                                 </div>
