--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -51,19 +51,22 @@
                                         <i class="fas fa-heart"></i>
                                     </div>
                                     <div>
-                                        <i class="fas fa-plus-circle"></i>
+                                        <i class="fas fa-plus-circle addtoplaylist" id="popup-btn"></i>
                                     </div>
                                     <div>
                                         <i class="fas fa-share-alt"></i>
                                     </div>
                                 </div>
-                                <div class="playlist-form">
-                      <%= simple_form_for @playlist_track, url: playlist_tracks_path, method: :post do |f| %>
-                        <%= f.association :playlist, :collection => Playlist.all, label_method: :playlist_title %>
-                        <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
-                        <%= f.submit "Create" %>
-                        <% end %>
-
+                                
+                        </div>
+                        <div class="pop-up hidden-popup" id="popup">
+                            <h1>This is a popup</h1>
+                            <div class="playlist-form">
+                                    <%= simple_form_for @playlist_track, url: playlist_tracks_path, method: :post do |f| %>
+                                        <%= f.association :playlist, :collection => Playlist.all, label_method: :playlist_title %>
+                                        <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
+                                        <%= f.submit "Create" %>
+                                    <% end %>
                                 </div>
                         </div>
                     </div>
