--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -57,17 +57,16 @@
                                         <i class="fas fa-share-alt"></i>
                                     </div>
                                 </div>
-                                
                         </div>
                         <div class="pop-up hidden-popup" id="popup">
-                            <h1>This is a popup</h1>
+                            <h1>Choose Playlist</h1>
                             <div class="playlist-form">
-                                    <%= simple_form_for @playlist_track, url: playlist_tracks_path, method: :post do |f| %>
-                                        <%= f.association :playlist, :collection => Playlist.all, label_method: :playlist_title %>
-                                        <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
-                                        <%= f.submit "Create" %>
-                                    <% end %>
-                                </div>
+                                <%= simple_form_for @playlist_track, url: playlist_tracks_path, method: :post do |f| %>
+                                    <%= f.association :playlist, :collection => Playlist.all, label_method: :playlist_title %>
+                                    <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
+                                    <%= f.submit "Create" %>
+                                <% end %>
+                            </div>
                         </div>
                     </div>
                     <% end %>
