--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -4,7 +4,7 @@
             <%= render 'shared/verticalnavbar' %>
             <%= yield %>
         </div>
-            <div class="album-tracks-area">
+            <div class="album-tracks-area" id="trackpopup">
                 <div class="background-albums-show">
                     <% if @track.first.photo.attached? %>
                     <%= cl_image_tag @track.first.photo.key, class: "show-background"%>
