--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -1,13 +1,32 @@
 .pop-up {
+    // display: block;
+    // background-color: #000;
+    // color: white;
+    // padding: 10px;
+    // border-radius: 10px;
+    // text-align: center;
+    // animation: fadeIn ease 1s;
+    // -webkit-animation: fadeIn ease 1s;
+    // position: absolute;
+    // z-index: 99999;
+    // top: 40vh;
+    // right: 40vh;
+
     display: block;
-    background-color: #000;
+    /* background-color: #000; */
+    backdrop-filter: blur(15px);
+    box-shadow: 0 0 15px rgba(0,0,0,0.9);
     color: white;
-    padding: 10px;
+    padding: 80px 80px;
+    /* height: 400px; */
     text-align: center;
+    border-radius: 10px;
     animation: fadeIn ease 1s;
     -webkit-animation: fadeIn ease 1s;
     position: absolute;
     z-index: 99999;
+    top: 20vh;
+    right: 50vh;
 }
 
 @keyframes fadeIn {
