--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -60,7 +60,7 @@
                         </div>
                         <div class="pop-up hidden-popup" id="popup">
                             <div>
-                                <i class="fas fa-times"></i>
+                                <i class="fas fa-times close-popup"></i>
                             </div>
                             <h1>Choose Playlist</h1>
                             <div class="playlist-form">
