--- a/app/assets/stylesheets/components/_albumtracks.scss
+++ b/app/assets/stylesheets/components/_albumtracks.scss
@@ -1,10 +1,10 @@
 .album-tracks-area {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-column-gap: 20px;
     row-gap: 40px;
     // padding: 75px 20px 75px 20px;
-    width: 90%;
+    width: 100%;
     // margin-left: 280px;
 }
 
