continued user account page fixed nav path

--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -19,7 +19,7 @@
         </div>
         <div class="flex">
         <i class="fas fa-user"></i>
-        <%= link_to "Account", users_path(@user), class: "nav-text" %>
+        <%= link_to "Account", user_path(current_user), class: "nav-text" %>
         </div>
     </div>
 
