--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
             <%= yield %>
         </div>
             <div class="album-tracks-area" id="trackpopup">
-                
+                <h1>Account</h1>
             </div>
         </div>
     <div class="fullwidth-player fixed">
