--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,18 @@
               <%= f.error_notification %>
 
               <div class="form-inputs">
+                <%= f.input :fname,
+                            required: true,
+                            autofocus: true,
+                            input_html: { autocomplete: "First Name" }%>
+                <%= f.input :lname,
+                            required: true,
+                            autofocus: true,
+                            input_html: { autocomplete: "Last Name" }%>
+                <%= f.input :username,
+                            required: true,
+                            autofocus: true,
+                            input_html: { autocomplete: "Username" }%>            
                 <%= f.input :email,
                             required: true,
                             autofocus: true,
