--- a/app/assets/stylesheets/components/_accountarea.scss
+++ b/app/assets/stylesheets/components/_accountarea.scss
@@ -2,6 +2,8 @@
     position: relative;
     left: 300px;
     top: 80px;
+    background-color: grey;
+    padding: 50px;
 }
 
 .station-background {
