--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -1,7 +1,7 @@
 <div class="vert-nav">
     <div class="vertnav-avatar-title">
         <%= image_tag "avatar.png", class:"avatar-vertnav" %>
-        <h1 class="vertnav-username">@Username</h1>
+        <h1 class="vertnav-username">@<%= current_user.username %></h1>
         <p class="vertnav-usertype">User Type</h1>
     </div>
     <div class="vertnav-items">
